tests/snapshots/regression-beacons-black_hole_class_6.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Rifter
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 4.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 9.600000
ship/passiveShieldEffectiveRechargeRate      = 10.193760
ship/passiveShieldRechargeRate               = 6.466667
ship/armorEffectiveRepairRate                = 35.633018
ship/armorRepairRate                         = 20.444444
ship/velocityBoost                           = 161.534780
ship/ehp                                     = 3980.030558
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.138125
ship/armorKineticDamageEffectiveResonance    = 0.159375
ship/armorExplosiveDamageEffectiveResonance  = 0.191250
ship/armorEmDamageEffectiveResonance         = 0.085000
ship/shieldEhp                               = 1911.330026
ship/hullEhp                                 = 1088.308387
ship/armorEhp                                = 980.392145
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.573750
ship/damagePerSecondWithReload               = 66.576407
ship/damagePerSecondWithoutReload            = 70.419045
ship/damageAlpha                             = 146.148130
ship/powerFree                               = 18.800000
ship/cpuFree                                 = 54.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 384.533333
ship/capacitorPeakDelta                      = 32.044444
ship/capacitorPeakLoad                       = -23.711111
ship/capacitorPeakRecharge                   = 8.333333
ship/alignTime                               = 7.038327
ship/mass                                    = 1567000.000000
ship/hp                                      = 437.500000
ship/powerOutput                             = 51.250000
ship/powerLoad                               = 32.450000
ship/maxVelocity                             = 2684.817974
ship/capacity                                = 112.000002
ship/cpuOutput                               = 162.500000
ship/cpuLoad                                 = 108.500000
ship/rechargeRate                            = 93750.000000
ship/agility                                 = 3.240000
ship/maxTargetRange                          = 56250.000000
ship/scanSpeed                               = 1125.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/warpCapacitorNeed                       = 0.000001
ship/scanLadarStrength                       = 9.600000
ship/shieldCapacity                          = 1212.500000
ship/armorHP                                 = 562.500000
ship/armorEmDamageResonance                  = 0.340000
ship/armorExplosiveDamageResonance           = 0.765000
ship/armorKineticDamageResonance             = 0.637500
ship/armorThermalDamageResonance             = 0.552500
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusMF                             = -37.500000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 312.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 37.000000
ship/scanResolution                          = 825.000000
ship/shipBonusMF2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

incoming_effect_1/type                        = Class 6 Black Hole Effects
incoming_effect_1/effect                      = systemTargetingRange
incoming_effect_1/maxTargetRangeMultiplier    = 2.000000
incoming_effect_2/type                        = Class 6 Black Hole Effects
incoming_effect_2/effect                      = systemMissileVelocity
incoming_effect_2/missileVelocityMultiplier   = 1.500000
incoming_effect_3/type                        = Class 6 Black Hole Effects
incoming_effect_3/effect                      = systemMaxVelocity
incoming_effect_3/maxVelocityMultiplier       = 2.000000
incoming_effect_4/type                        = Class 6 Black Hole Effects
incoming_effect_4/effect                      = systemAoeVelocity
incoming_effect_4/aoeVelocityMultiplier       = 2.000000
incoming_effect_5/type                        = Class 6 Black Hole Effects
incoming_effect_5/effect                      = systemAgility
incoming_effect_5/agilityMultiplier           = 1.500000
incoming_effect_6/type                        = Class 6 Black Hole Effects
incoming_effect_6/effect                      = systemWebifierStrengthMultiplier
incoming_effect_6/stasisWebStrengthMultiplier = 0.500000
incoming_effect_7/type                        = Class 6 Black Hole Effects
incoming_effect_7/effect                      = systemUpwellAoeVelocity
incoming_effect_7/aoeVelocityMultiplier       = 2.000000

high_1/type                         = 200mm AutoCannon II
high_1/state                        = active
high_1/damageVolley                 = 75.610631
high_1/speedWithReload              = 1770.833328
high_1/speedOfReload                = 83.333328
high_1/damagePerSecondWithReload    = 42.697768
high_1/damagePerSecondWithoutReload = 44.806300
high_1/chargeAmount                 = 120.000007
high_1/cycleTime                    = 1687.500000
high_1/power                        = 3.600000
high_1/cpu                          = 6.750000
high_1/speed                        = 1687.500000
high_1/maxRange                     = 750.000000
high_1/damageMultiplier             = 5.479031
high_1/falloff                      = 9675.000000
high_1/trackingSpeed                = 393.750000
high_1/barrageDmgMultiplier         = 5.479031
high_1/barrageFalloff               = 9675.000000
high_1/entityFlyRange               = 250.000000
high_1/heatDamage                   = 0.750000
high_1/charge/type                  = Republic Fleet EMP S

high_2/type                         = Rocket Launcher II
high_2/state                        = active
high_2/damageVolley                 = 70.537499
high_2/speedWithReload              = 2953.999996
high_2/speedOfReload                = 199.999996
high_2/damagePerSecondWithReload    = 23.878639
high_2/damagePerSecondWithoutReload = 25.612745
high_2/chargeAmount                 = 50.000001
high_2/power                        = 3.600000
high_2/cpu                          = 12.750000
high_2/speed                        = 2754.000000
high_2/heatDamage                   = 0.600000
high_2/charge/type                  = Scourge Rage Rocket
high_2/charge/maxVelocity           = 4218.750000
high_2/charge/kineticDamage         = 70.537499
high_2/charge/explosionDelay        = 3000.000000
high_2/charge/aoeVelocity           = 387.000000
high_2/charge/aoeCloudSize          = 25.500000

medium_1/type  = Small Shield Extender II
medium_1/state = online
medium_1/power = 2.250000

medium_2/type              = 1MN Afterburner II
medium_2/state             = active
medium_2/capacitorPeakLoad = 0.733333
medium_2/cycleTime         = 7500.000000
medium_2/capacitorNeed     = 5.500000
medium_2/speedFactor       = 168.750000
medium_2/duration          = 7500.000000
medium_2/heatDamage        = 7.200000

medium_3/type                     = Small Capacitor Booster II
medium_3/state                    = active
medium_3/capacitorInjectionAmount = 400.000000
medium_3/chargeAmount             = 1.250000
medium_3/capacitorPeakLoad        = -33.333333
medium_3/cycleTime                = 12000.000000
medium_3/heatDamage               = 3.975000
medium_3/charge/type              = Navy Cap Booster 400

low_1/type  = Damage Control II
low_1/state = online

low_2/type              = Small Armor Repairer II
low_2/state             = active
low_2/armorRepairRate   = 20.444444
low_2/capacitorPeakLoad = 8.888889
low_2/cycleTime         = 4500.000000
low_2/duration          = 4500.000000
low_2/heatDamage        = 4.050000

low_3/type  = Overdrive Injector System II
low_3/state = online
